# isucon10-qualify-tmp

./: .gitignore  LICENSE  README.md
bench/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
bench/asset/: asset.go  chair.go  chair_test.go  condition.go  draft.go  estate.go  estate_test.go
bench/client/: browse.go  client.go  newclient.go  useragent.go  useragent_test.go  webapp.go
bench/fails/: fails.go
bench/parameter/: parameter.go
bench/reporter/: reporter.go  reporter_test.go
bench/scenario/: botScenario.go  chairDraftPostScenario.go  chairSearchScenario.go  check.go  estateDraftPostScenario.go  estateNazotteSearchScenario.go  estateSearchScenario.go  load.go  normal.go  scenario.go  searchQuery.go  verify.go  verifyWithSnapshot.go
bench/score/: score.go
initial-data/: .gitignore  Makefile  README.md  description.txt  make_chair_data.py  make_estate_data.py  requirements.txt
initial-data/make_verification_data/: chair.go  estate.go  main.go  nazotte.go  types.go  util.go
provisioning/ansible/: Makefile  README.md  Vagrantfile  allinone.yaml  ansible.cfg  bench.yaml  competitor.yaml
webapp/: .gitignore  Makefile  README.md
webapp/deno/: Dockerfile  Makefile  app.ts
webapp/docker-compose/: deno.yaml  go.yaml  nodejs.yaml  perl.yaml  ruby.yaml  rust.yaml
webapp/frontend/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  next.config.js  package-lock.json  package.json  server.js  tsconfig.json
webapp/go/: .gitignore  Dockerfile  (+4 more)
webapp/rust/: Cargo.toml  Dockerfile  Makefile
webapp/rust/src/: main.rs
(+95 files in other folders)
