[package]
name = "isuumo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.2"
actix-rt = "1.1"
actix-web = "2.0"
bytes = "0.5"
csv = "1.1"
env_logger = "0.7"
futures = "0.3"
listenfd = "0.3"
log = "0.4"
mysql = "18.2"
r2d2 = "0.8"
r2d2_mysql = "18.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["process"] }
